# generative-HMI

./: .gitignore  README.md  pyproject.toml
projects/Nordsea Alpha/: project.json
tools/gui/: __init__.py  drilldown.py  hmi.py  hmi_generator.py  hmi_history.py  hmi_models.py  hmi_renderer.py  mock_opcua_server.py  mock_sim.py  mock_tag_defs.py  opcua_client.py  project_endpoints.py  routes.py  schematic_anchors.py  tag_catalog.py
tools/gui/static/: hmi-design.css  hmi.css
tools/gui/templates/: base.html  hmi.html  hmi_screen.html
tools/gui/templates/partials/hmi/: alarm_list.html  bar_chart.html  command.html  gauge.html  schematic.html  status.html  table.html  trend_chart.html  value_card.html
tools/gui/templates/partials/hmi/diagrams/: farm_sld.html  substation_sld.html  turbine_drivetrain.html
